Updated HTML formatting

--- a/cozy.html
+++ b/cozy.html
@@ -1,104 +1,130 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="keywords" content="Portfolio">
-        <meta name="description" content="Keller Bowman - 1001948719 | Personal Portfolio">
-        <meta name="author" content="Keller Bowman">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="keywords" content="Portfolio" />
+    <meta
+      name="description"
+      content="Keller Bowman - 1001948719 | Personal Portfolio"
+    />
+    <meta name="author" content="Keller Bowman" />
 
-        <title>Keller Bowman - 1001948719 | Personal Portfolio</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12" id="fullscreen-cover">
-                    <img src="images/cozy-firewatch-tower.jpg" alt="Cozy firewatch tower at night.">
-                    <h1>COZY 3</h1>
-                    <p class="text-center">
-                        Step away from boring realism and embrace a beautifully hand-crafted stylized weather system.
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river." class="rounded-image">
-                </div>
-                <div class="col-xs-12 col-lg-8">
-                    <h1>About COZY 3</h1>
-                    <p>
-                        Create stunning weather patterns for your game worlds! From time-of-day to annual seasons, from puffy clouds to raging storms, from sunny days to dense fog, COZY does it all with ease! Focus on your scene's colors and easily tweak all variables for ultimate customization!
-                    </p>
-                    <h3>New in version 3</h3>
-                    <ul>
-                        <li></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <h2>Skills used for this project</h2>
-                </div>
-                <div class="col-lg-4">
-                    <h3>C#</h3>
-                    <p>
-                        
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>HLSL</h3>
-                    <p>
-                        Designed 3D shaders and lighting with HLSL and ShaderGraph.
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>GitHub</h3>
-                    <p>
-                        Designed 3D shaders and lighting with HLSL and ShaderGraph.                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>Adobe Illustrator</h3>
-                    <p>
-                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>Adobe Illustrator</h3>
-                    <p>
-                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>HTML</h3>
-                    <p>
-                        I am currently learning HTML for UI/UX in the Communication Technology program at UTA                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>CSS</h3>
-                    <p>
-                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <a href="" class="btn">Learn more about me</a>
-                </div>
-            </div>
-            <div class="row">
-                <blockquote class="text-center">
-                    <p>Distant Lands is a great creator, all of the assets look beautiful as soon as the Unity package finishes importing into the project, but the love for the craft goes beyond just the point of sale. Distant Lands offers tremendous support in his Discord and has an awesome community.</p>
-                    <footer>IndieScape Games</footer>
-                </blockquote>
-            </div>
-            <div class="row center-content">
-                <a href="https://assetstore.unity.com/packages/tools/utilities/cozy-stylized-weather-3-271742" class="btn btn-primary">View on the Unity Asset Store</a>
-            </div>
+    <title>Keller Bowman - 1001948719 | Personal Portfolio</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12" id="fullscreen-cover">
+          <img
+            src="images/cozy-firewatch-tower.jpg"
+            alt="Cozy firewatch tower at night."
+          />
+          <h1>COZY 3</h1>
+          <p class="text-center">
+            Step away from boring realism and embrace a beautifully hand-crafted
+            stylized weather system.
+          </p>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-lg-4">
+          <img
+            src="images/pexels-yiming-tang-20324868.jpg"
+            alt="White house with red roof by a lake or river."
+            class="rounded-image"
+          />
+        </div>
+        <div class="col-xs-12 col-lg-8">
+          <h1>About COZY 3</h1>
+          <p>
+            Create stunning weather patterns for your game worlds! From
+            time-of-day to annual seasons, from puffy clouds to raging storms,
+            from sunny days to dense fog, COZY does it all with ease! Focus on
+            your scene's colors and easily tweak all variables for ultimate
+            customization!
+          </p>
+          <h3>New in version 3</h3>
+          <ul>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <h2>Skills used for this project</h2>
+        </div>
+        <div class="col-lg-4">
+          <h3>C#</h3>
+          <p></p>
+        </div>
+        <div class="col-lg-4">
+          <h3>HLSL</h3>
+          <p>Designed 3D shaders and lighting with HLSL and ShaderGraph.</p>
+        </div>
+        <div class="col-lg-4">
+          <h3>GitHub</h3>
+          <p>Designed 3D shaders and lighting with HLSL and ShaderGraph.</p>
+        </div>
+        <div class="col-lg-4">
+          <h3>Adobe Illustrator</h3>
+          <p>
+            I am currently learning CSS for UI/UX in the Communication
+            Technology program at UTA
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <h3>Adobe Illustrator</h3>
+          <p>
+            I am currently learning CSS for UI/UX in the Communication
+            Technology program at UTA
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <h3>HTML</h3>
+          <p>
+            I am currently learning HTML for UI/UX in the Communication
+            Technology program at UTA
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <h3>CSS</h3>
+          <p>
+            I am currently learning CSS for UI/UX in the Communication
+            Technology program at UTA
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <a href="" class="btn">Learn more about me</a>
+        </div>
+      </div>
+      <div class="row">
+        <blockquote class="text-center">
+          <p>
+            Distant Lands is a great creator, all of the assets look beautiful
+            as soon as the Unity package finishes importing into the project,
+            but the love for the craft goes beyond just the point of sale.
+            Distant Lands offers tremendous support in his Discord and has an
+            awesome community.
+          </p>
+          <footer>IndieScape Games</footer>
+        </blockquote>
+      </div>
+      <div class="row center-content">
+        <a
+          href="https://assetstore.unity.com/packages/tools/utilities/cozy-stylized-weather-3-271742"
+          class="btn btn-primary"
+          >View on the Unity Asset Store</a
+        >
+      </div>
+    </div>
 
-        <!-- <div id="windowSize"></div> -->
+    <!-- <div id="windowSize"></div> -->
 
-        <script src="js/app.js"></script>
-    </body>
+    <script src="js/app.js"></script>
+  </body>
 </html>
