Added two additional images

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <body>
     <div class="container line-below">
       <div class="row">
-        <div class="col-xs-12 col-lg-7">
+        <div class="col-xs-12 col-lg-7 rounded-image">
           <img
-            src="images/pexels-yiming-tang-20324868.jpg"
-            alt="White house with red roof by a lake or river."
+            src="images/clouy-sky.jpg"
+            alt="Stylized art piece of a low poly tower with billowing cloud behind."
             class="rounded-image"
           />
         </div>
